Fixed first_login bug

--- a/etc/tempest.conf
+++ b/etc/tempest.conf
@@ -25,7 +25,7 @@ lock_path = /opt/stack/data/tempest
 
 # Print more verbose output (set logging level to INFO instead
 # of default WARNING level). (boolean value)
-verbose=true
+#verbose=false
 
 # Log output to standard error. (boolean value)
 #use_stderr=true
@@ -166,7 +166,7 @@ s3_materials_path = /home/trobert/devstack/files/images/s3-materials/cirros-0.3.
 s3_url = http://192.168.247.116:3333
 ec2_url = http://192.168.247.116:8773/services/Cloud
 http_socket_timeout = 30
-build_timeout = 1960
+build_timeout = 196
 
 #
 # Options defined in tempest.config
@@ -240,24 +240,19 @@ cli_dir = /usr/local/bin
 
 [compute]
 ssh_connect_method = floating
-flavor_ref_alt = 102
+flavor_ref_alt = 84
 flavor_ref = 102
 image_alt_ssh_user = cirros
-image_ref_alt = c6bec023-1590-48b7-b5ee-c4d8ff9a1dca
+image_ref_alt = d2e98e6d-9fa9-4a34-9956-26f0a82882d8
+
 image_ssh_user = cirros
-image_ref = c6bec023-1590-48b7-b5ee-c4d8ff9a1dca
-ssh_timeout = 196
+image_ref = d2e98e6d-9fa9-4a34-9956-26f0a82882d8
+ssh_timeout = 1960
 ip_version_for_ssh = 4
-#network_for_ssh = private_cbinit
-
-
-#private_network_id = b4450b1c-4136-42c2-8013-9729e4e981d4
-#fixed_network_name = private_cbinit
-
+network_for_ssh = private
 ssh_user = cirros
-allow_tenant_isolation = true
-build_timeout = 6000
-#path_to_private_key=<None>
+allow_tenant_isolation = True
+build_timeout = 1960
 
 #
 # Options defined in tempest.config
@@ -346,7 +341,7 @@ build_timeout = 6000
 #fixed_network_name=private
 
 # Network used for SSH connections. (string value)
-#network_for_ssh=private
+#network_for_ssh=public
 
 # IP version used for SSH connections. (integer value)
 #ip_version_for_ssh=4
@@ -426,11 +421,11 @@ username = admin
 
 
 [compute-feature-enabled]
+api_extensions = all
 block_migration_for_live_migration = False
 change_password = False
 live_migration = False
 resize = True
-api_v3 = False
 
 #
 # Options defined in tempest.config
@@ -597,19 +592,16 @@ dashboard_url = http://192.168.247.116/
 [identity]
 auth_version = v2
 admin_domain_name = Default
-admin_tenant_id = be152a8984d449fea2f687ede3d0f82a
+admin_tenant_id = dca65258dbfc4675b43aed363352b7de
 admin_tenant_name = admin
 admin_password = Passw0rd
 admin_username = admin
-
-alt_tenant_name = admin
+alt_tenant_name = alt_demo
 alt_password = Passw0rd
-alt_username = admin
-
-tenant_name = admin
+alt_username = alt_demo
+tenant_name = demo
 password = Passw0rd
-username = admin
-
+username = demo
 uri_v3 = http://192.168.247.116:5000/v3/
 uri = http://192.168.247.116:5000/v2.0/
 
@@ -782,9 +774,9 @@ uri = http://192.168.247.116:5000/v2.0/
 
 [network]
 default_network = 10.0.0.0/24
-public_router_id = 7ab75f70-2e92-41d3-9d6f-cd2f585f3fec
-public_network_id = 5a610cd0-cad5-4c18-b7b8-3ffaf611d430
-tenant_networks_reachable = true
+public_router_id = 18f0a0e8-73e6-4330-88ee-ed369ab3a33f
+public_network_id = 8bff8236-e10e-4bc2-8108-7d6af6e8c516
+tenant_networks_reachable = false
 api_version = 2.0
 
 #
@@ -813,10 +805,10 @@ api_version = 2.0
 
 # The cidr block to allocate tenant ipv6 subnets from (string
 # value)
-#tenant_network_v6_cidr=2003::/64
+#tenant_network_v6_cidr=2003::/48
 
 # The mask bits for tenant ipv6 subnets (integer value)
-#tenant_network_v6_mask_bits=96
+#tenant_network_v6_mask_bits=64
 
 # Whether tenant network connectivity should be evaluated
 # directly (boolean value)
@@ -840,7 +832,7 @@ api_version = 2.0
 
 # List of dns servers whichs hould be used for subnet creation
 # (list value)
-dns_servers=8.8.8.8
+#dns_servers=8.8.8.8,8.8.4.4
 
 
 [network-feature-enabled]
@@ -902,6 +894,7 @@ ipv6 = True
 
 
 [object-storage-feature-enabled]
+discoverable_apis = all
 
 #
 # Options defined in tempest.config
@@ -912,11 +905,20 @@ ipv6 = True
 # expected to be enabled (list value)
 #discoverable_apis=all
 
+# Execute (old style) container-sync tests (boolean value)
+#container_sync=true
+
+# Execute object-versioning tests (boolean value)
+#object_versioning=true
+
+# Execute discoverability tests (boolean value)
+#discoverability=true
+
 
 [orchestration]
 build_timeout = 900
 instance_type = m1.heat
-image_ref = c6bec023-1590-48b7-b5ee-c4d8ff9a1dca
+image_ref = Fedora-x86_64-20-20140618-sda
 
 #
 # Options defined in tempest.config
@@ -1168,7 +1170,7 @@ too_slow_to_test = False
 
 
 [volume]
-build_timeout = 1960
+build_timeout = 196
 
 #
 # Options defined in tempest.config
@@ -1221,6 +1223,7 @@ build_timeout = 1960
 
 
 [volume-feature-enabled]
+api_extensions = all
 
 #
 # Options defined in tempest.config
@@ -1247,3 +1250,16 @@ build_timeout = 1960
 # Is the v2 volume API enabled (boolean value)
 #api_v2=true
 
+
+
+[compute-feature-disabled]
+api_extensions = 
+
+[network-feature-disabled]
+api_extensions = 
+
+[object-storage-feature-disabled]
+discoverable_apis = 
+
+[volume-feature-disabled]
+api_extensions = 
