Added more tests

--- a/etc/tempest.conf
+++ b/etc/tempest.conf
@@ -238,12 +238,17 @@ cli_dir = /usr/local/bin
 #timeout=15
 
 
+
+
+
 [compute]
 ssh_connect_method = floating
 flavor_ref_alt = 84
 flavor_ref = 102
 image_alt_ssh_user = cirros
 image_ref_alt = d2e98e6d-9fa9-4a34-9956-26f0a82882d8
+path_to_private_key=/opt/stack/tempest/tempest/cbinit/resources/key.pem
+
 
 image_ssh_user = cirros
 image_ref = d2e98e6d-9fa9-4a34-9956-26f0a82882d8
