--- a/etc/tempest.conf
+++ b/etc/tempest.conf
@@ -14,7 +14,6 @@ lock_path = /opt/stack/data/tempest
 # Directory to use for lock files. (string value)
 #lock_path=<None>
 
-
 #
 # Options defined in tempest.openstack.common.log
 #
@@ -175,7 +174,7 @@ build_timeout = 196
 # EC2 URL (string value)
 #ec2_url=http://localhost:8773/services/Cloud
 
-# S3 URL (string value)
+# S3 URL (string value)instance_type
 #s3_url=http://localhost:8080
 
 # AWS Secret Key (string value)
@@ -239,15 +238,14 @@ cli_dir = /usr/local/bin
 
 [compute]
 ssh_connect_method = floating
-flavor_ref_alt = 84
-flavor_ref = 102
+flavor_ref_alt = 102
+flavor_ref = d125de1e-876d-4c1c-abc9-8fe16a3f4873
 image_alt_ssh_user = cirros
-image_ref_alt = d2e98e6d-9fa9-4a34-9956-26f0a82882d8
+image_ref_alt = 1657935e-1177-4663-8136-9cb784ecd4d1
 path_to_private_key=/opt/stack/tempest/tempest/cbinit/resources/key.pem
 
-
 image_ssh_user = cirros
-image_ref = d2e98e6d-9fa9-4a34-9956-26f0a82882d8
+image_ref = 1657935e-1177-4663-8136-9cb784ecd4d1
 ssh_timeout = 1960
 ip_version_for_ssh = 4
 network_for_ssh = private
@@ -1264,3 +1262,8 @@ discoverable_apis =
 
 [volume-feature-disabled]
 api_extensions = 
+
+[cbinit]
+replace_code = False
+service_type = http
+userdata_path = /opt/stack/tempest/tempest/cbinit/resources/multipart_metadata
